# michael-zhou-qa-portfolio

./: .gitignore  AGENTS.md  CLAUDE.md  IMPROVEMENT_PLAN.md  LABEL_STRATEGY.md  README.md  changed-files.txt  commitlint.config.js  package-lock.json  package.json  电梯更换选品接龙文案.md
selenium-tests/: .env.example  .gitignore  BUGFIX_LOG.md  DESIGN_SPECIFICATION.md  ISSUE-004-FIX-COMPLETED.md  ISSUES.md  MANIFEST.in  MIGRATION.md  PHASE_2_IMPLEMENTATION.md  PHASE_2_QUICK_START.md  README.md  RUN_DEMO.md  SELF_TEST_REPORT.md  VERIFICATION_READY.md  baseline-test-results.txt  complete-test-run.txt  current-structure.txt  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_login_fix.py
selenium-tests/config/: test_config.py
selenium-tests/docs/: DIAGNOSTIC_CHECKLIST.md  README.md
selenium-tests/docs/architecture/: ENTERPRISE_STANDARDS_ASSESSMENT.md  FILE_LOCATIONS.md  IMPLEMENTATION_SUMMARY.md  PHASE_3_IMPLEMENTATION.md
selenium-tests/docs/demos/: DEMO_SUMMARY.txt  INTERVIEW_DEMO.md  PROJECT_STATS.md
selenium-tests/docs/guides/: MANUAL_TESTING_GUIDE.md  PREVENTION_STRATEGY.md  webdriver-version-management.md
selenium-tests/docs/issues/: ISSUE-004-FIX-VERIFIED.md  ISSUE-004-INVESTIGATION-REPORT.md  ISSUES.md
selenium-tests/docs/project/: DIRECTORY_CLEANUP_LOG.md  REFACTORING_SUMMARY.md
selenium-tests/docs/project-management/: ISSUE-004-QUICK-REF.md  ISSUES.md
selenium-tests/docs/test-documentation/: README.md
selenium-tests/docs/test-reports/: SELF_TEST_EXECUTION_REPORT.md
selenium-tests/helpers/: __init__.py  debug_helper.py  logger.py
selenium-tests/logs/archive/: baseline-state.txt  final-test-verification.txt
selenium-tests/pages/: base_page.py  login_page.py  system_update_page.py
selenium-tests/reports/allure-results/: 0536c653-189a-4411-af58-e9fa96bdb200-container.json  0810b6c4-4364-479e-ae6b-1e5c146562e6-container.json  08982df2-f2a3-4751-8ae1-1eebb518512e-container.json  0b003ca2-9a82-4600-9b71-4f0c8f3fc72d-container.json  0c880831-144d-4963-9828-238cead6096c-container.json  0d43593f-49bd-4d78-8415-bcf8739ad3fa-attachment.txt  0d8e8236-848b-410f-aa45-48cc8b36c62a-attachment.txt  0db442a6-c148-4d7c-aae6-326afd2a945f-attachment.txt  0e866ed3-506a-4570-8107-294a5a6f3162-result.json  0ec5779e-50d7-4edf-8b1d-32e5f9c536fc-result.json  0ede554c-aab5-43a8-beeb-9d373a622284-container.json  0f0463f9-d018-4175-a997-cf9356f6addb-result.json  12086e61-4338-41f3-988e-94c21515dc56-container.json  132ff3b5-5e82-4374-8f62-645e1c0ce3fc-result.json  166c565c-ad1f-4994-a3d0-b20f31acede4-container.json  190a6af7-0526-4aba-a05e-0fc54f178fbe-attachment.txt  1b4c4806-65dc-4a0b-9316-1c9d76a6663f-attachment.txt  22f4dcc7-73e1-4562-a670-e0a633a02833-container.json  238ab514-4c63-449f-a143-ad04865239ee-result.json  24603cd3-ffd8-4b7a-afbc-848e690894fa-container.json  25581125-86fd-43b2-be70-e5b05a39df04-attachment.txt  257fb30d-1315-45ac-b6aa-a5baf5f40d43-result.json  27dc7844-dae0-4e90-a76b-9482a135bcc5-attachment.txt  2803af52-2e66-4d4c-a635-766501cb4035-attachment.txt  29e4eb2d-afb1-49e0-825d-85d1c06db9c9-attachment.txt  2b59619e-b2ec-4ed8-af20-c90a45eda92c-attachment.txt  2bbee1f8-3c14-48a0-97b6-d2db59c38756-result.json  2c030b36-8078-415e-b5a4-f41d68885b9b-result.json  2d2ccb3a-8517-46bd-9f65-c08741c210a3-attachment.txt  2df0fc9d-aac7-44b8-912e-c65ff1ee1ff5-attachment.txt  2e9343d0-65a4-4524-a0e7-da4864569d21-attachment.txt  302bcc3c-b643-498e-b128-3a7857aed3ee-result.json  309cfcd3-211a-4eae-8454-699ea605540f-result.json  312d3c2c-1ea1-42a5-be40-55df65a905ac-attachment.txt  31f48d4a-9300-475c-8e76-f43f536ad411-attachment.txt  31ff0c17-2273-4066-8daa-131624e1eb3a-container.json  335ea1a9-7859-48c6-8af8-6d435cc6cc54-attachment.txt  38c88e87-0e3a-4378-876d-d84e90dcbf96-container.json  3a0fa118-e41f-4cb5-99ba-74daaea67940-container.json  3b106c0a-a3dc-4d7e-97bf-46cce4664b30-container.json  (+131 more)
selenium-tests/scripts/: setup_dev.sh  verify-test-environment.sh
selenium-tests/src/tests/: conftest.py
selenium-tests/tests/: __init__.py  conftest.py  test_system_updates_enterprise.py
selenium-tests/tests/dev/: README.md  demo_test.py
selenium-tests/tests/ui/: test_system_updates_verification.py
selenium-tests/verification/: __init__.py
(+1381 files in other folders)
